compiler/tests/schema/error/enum_no_default.bond

//this bond file is invalid; do not use as example


namespace tests

enum Priority
{
     Low;
     Normal;
     High;
}

struct Test
{
     0: Priority p;
}